# QtDemo

./: .gitignore  CMakeLists.txt
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
